--- a/index.css
+++ b/index.css
@@ -42,11 +42,11 @@ ul {
 }
 
 li {
-  transition: all 0.5s;
+  transition: all 0.4s;
 }
 
 li:hover {
-  font-size: large;
+  font-size: x-large;
   padding: 2%;
   background-color: black;
   color: white;
