--- a/results.css
+++ b/results.css
@@ -3,6 +3,7 @@ body {
     text-align: center;
     font-size: 20px;
     font-family: 'Fredoka One', cursive;
+    flex-wrap: wrap;
 }
 
 a {
@@ -13,6 +14,7 @@ a {
     position: relative;
     top: 7px;
     border-radius: 10%;
+    text-decoration: none;
     transition: all 0.5s;
 }
 
@@ -21,4 +23,32 @@ a:hover {
   padding: 2%;
   background-color: white;
   color: black;
+}
+
+header {
+    grid-area: header;
+}
+
+main {
+    grid-area: main;
+}
+
+
+@media (max-width: 576px) {
+    body {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: .1fr .1fr;
+        grid-template-areas: 
+        "header"
+        "main";
+    }
+    a {
+        font-size: large;
+        font-family: 'Fredoka One', cursive; 
+        color: white;
+        position: relative;
+        top: 4px;
+        text-decoration: none;
+    }
 }
