--- a/about-styles.css
+++ b/about-styles.css
@@ -1,12 +1,13 @@
 body {
+  display: grid;
     background-color: bisque;
-    grid-template-columns: auto auto auto;
-    grid-template-rows: .4fr .2 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto auto auto auto;
     grid-template-areas: 
         "header header header"
-        ""
-        ""
-        "";
+        "nav nav nav"
+        "aside main main"
+        "aside main main";
 }
 
 header {
@@ -14,6 +15,45 @@ header {
     text-align: center;
     font-family: 'Fredoka One';
     font-size: x-large;
+}
+
+nav {
+  grid-area: nav;
+}
+
+aside {
+  padding-left: 15px;
+  grid-area: aside;
+  font-size: 60px;
+  font-family: 'Fredoka One';
+  border: 10px solid gray;
+  border-radius: 10%;
+}
+
+main {
+  grid-area: main;
+}
+
+.container {
+  display: flex;
+  padding-left: 50px;
+
+}
+
+.card {
+  background: white;
+  width: 250px;
+  height: 280px;
+  margin:20px 8px 8px 8px;
+  box-shadow: 5px 5px 8px black;
+  border: gray solid 8px;
+  border-radius: 10%;
+  transition: all 0.4s;
+}
+
+.card:hover {
+  width: 300px;
+  height: 330px;
 }
 
 ul {
