--- a/index.css
+++ b/index.css
@@ -1,5 +1,4 @@
 body {
-  flex-wrap: wrap;
   background-color: bisque;
   display:grid;
   grid-template-columns: 1fr;
@@ -19,7 +18,8 @@ header {
 }
 
 #logo {
-  width: 15%;
+  width: 20%;
+  height: auto;
 }
 
 h1 {
@@ -54,4 +54,10 @@ li:hover {
 
 a {
   text-decoration: none;
+}
+
+@media (max-width: 640px) {
+  #logo {
+    width: 35%;
+  }
 }
